fix: :bug: fixed modal and pagination layout issues

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -26,7 +26,7 @@
   --color-steel: #b7b7ce;
   --color-fairy: #d685ad;
 
-  --color-black-transparent: #ffffffcc;
+  --color-black-transparent: #000000cc;
 
   /* SHADOW */
   --card-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
